done with the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="header-container">
     <div class="header">
         <img src="./images/gtr.png" alt="Nissan GT-R logo" height="50px" width="50px">
         <div class="header-links">
@@ -16,8 +17,64 @@
               <a href=""><li>Mazda</li></a>
             </ul>
         </div>
-    <div class=""></div>
     </div>
+
+    <div class="header-bottom">
+        <div class="header-left">
+            <h1 id="gtr">GT-R Motors</h1>
+            <p>JDM cars for enthusiasts.</p>
+            <button>Sign up</button>
+        </div>
+        <div class="header-right">
+            <img id="car1"src="./images/patrik-storm-alstra-pictures-ZKFr6lpEF3U-unsplash.jpg" alt="">
+        </div>
+    </div>
+  </div>
+
+  <div class="title">Some Famous JDM Cars</div>
+  <div class="main-container">
+    <div class="cards">
+        <div class="card"><img class="cars" src="https://shopgreddy-com.myshopify.com/cdn/shop/products/17040330_gpp-01.jpg?v=1643072708"></div>
+        <div class="card"><img src="https://ih1.redbubble.net/image.467960002.4244/aps,504x498,large,transparent-pad,600x600,f8f8f8.u3.jpg" alt="" class="cars"></div>
+        <div class="card"><img src="https://printler.com/media/photo/129632.jpg" alt="" class="cars"></div>
+        <div class="card"><img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/mitsubishi-lancer-evo-v-yoshiharu-miyakawa.jpg" alt="" class="cars"></div>
+    </div>
+
+    <div class="text">
+        <div class="paragraph">Mazda RX-7</div>
+        <div class="paragraph">Skyline R32 GT-R</div>
+        <div class="paragraph">Toyota AE86</div>
+        <div class="paragraph">Mitsubishi EVO</div>
+    </div>
+  </div>
+
+  <div class="quote-container">
+    <div class="quote">
+        ''Life is simple. You make choices and you don't look back.''
+    </div>
+    <div class="author">
+       - Han Lue
+    </div>
+  </div>
+
+  <div class="big">
+    <div class="signup-container">
+        <div class="signup-text">
+            <h2>Sign up to our JDM community!</h1>
+            <p>Sign up to keep up to date with the latest JDM cars.</p>
+        </div>
+    
+    <div class="signup-button">
+        <button>Sign up</button>
+    </div>
+      </div> 
+  </div>
+
+  <div class="footer">
+    <footer>JDM Cars & Stuff</footer>
+  </div>
+
+
 
     
 </body>
